reiserfsincludedir		= $(includedir)/reiserfs
reiserfsinclude_HEADERS   	= bitmap.h filesystem.h journal.h tools.h \
				  block.h hashes.h key.h reiserfs.h \
				  exception.h gauge.h endian.h tree.h \
				  object.h segment.h path.h dir.h file.h \
				  core.h node.h
extra_headers			= strsep.h

noinst_HEADERS	      		= libprogs_tools.h debug.h callback.h $(extra_headers)
